# folder-sort

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  release.yml
examples/: rules.example.yaml
include/config/: ActionSpecFactory.hpp  ConditionFactory.hpp  ConfigLoader.hpp  RuleFactory.hpp
include/core/actions/: Action.hpp  ActionExecutor.hpp  ActionFactory.hpp  ActionSpec.hpp  CopyAction.hpp  DeleteAction.hpp  MoveAction.hpp  RenameAction.hpp
include/core/app/: Application.hpp
include/core/conditions/: Condition.hpp  ContentCondition.hpp  ExtensionCondition.hpp  NameCondition.hpp  SizeCondition.hpp  TimeCondition.hpp
include/core/filesystem/: FilesystemScanner.hpp  ScanResponses.hpp
include/core/filesystem/platform/: FilesystemPlatform.hpp
include/core/model/: FileInfo.hpp
include/core/rules/: ExtensionRule.hpp  Rule.hpp  RuleEngine.hpp
include/folder_sort/: scan.hpp
include/logging/: Logger.hpp
src/: CMakeLists.txt  main.cpp  scanner.cpp
src/cli/: main.cpp
src/config/: ActionSpecFactory.cpp  CMakeLists.txt  ConditionFactory.cpp  ConfigLoader.cpp  RuleFactory.cpp
src/core/: CMakeLists.txt
src/core/actions/: Action.cpp  ActionExecutor.cpp  ActionFactory.cpp  CMakeLists.txt  CopyAction.cpp  DeleteAction.cpp  MoveAction.cpp  RenameAction.cpp
src/core/app/: Application.cpp  CMakeLists.txt
src/core/conditions/: CMakeLists.txt  ContentCondition.cpp  ExtensionCondition.cpp  NameCondition.cpp  SizeCondition.cpp  TimeCondition.cpp
src/core/filesystem/: CMakeLists.txt  FilesystemScanner.cpp
src/core/filesystem/platform/: CMakeLists.txt  FilesystemPlatform_posix.cpp  FilesystemPlatform_win.cpp
src/core/rules/: CMakeLists.txt  ExtensionRule.cpp  Rule.cpp  RuleEngine.cpp
src/logging/: CMakeLists.txt  Logger.cpp
tests/: CMakeLists.txt
tests/config/: ActionSpecFactoryTests.cpp  ConditionFactoryTests.cpp  ConfigLoaderTests.cpp  RuleFactoryTests.cpp
tests/core/actions/: ActionExecutorTests.cpp
tests/core/app/: ApplicationTests.cpp
tests/core/conditions/: ContentConditionTests.cpp  ExtensionConditionTests.cpp  NameConditionTests.cpp  SizeConditionTests.cpp
tests/core/filesystem/: FilesystemScannerPosixOnlyTests.cpp  FilesystemScannerTest.hpp  FilesystemScannerTests.cpp  FilesystemScannerWinOnlyTests.cpp
tests/core/rules/: ExtensionRuleTests.cpp  RuleEngineTests.cpp
tests/flows/: FlowTest.hpp  FlowTests.cpp
tests/helpers/: TestFilesystem.hpp  TestLogger.hpp
tests/helpers/posix/: FileGuard.hpp
tests/logging/: LogTests.cpp  LoggerTest.hpp
tests/test/: scanner_tests.cpp
